tests/fail/move_in_loop.stderr
tests/fail/move_in_loop.tk:6:19: error[E0105]: Parse error: Zero-argument closures must use '{ => ... }' to disambiguate from code blocks
